[gd_scene load_steps=6 format=3 uid="uid://v7gwn05ed1kv"]

[ext_resource type="Theme" uid="uid://c6108lc3jg2cv" path="res://assets/ui/GeneralTheme.tres" id="1_d6ccn"]
[ext_resource type="Script" path="res://game/editor_menu/EditorLevelButton.gd" id="2_ol4g6"]
[ext_resource type="Texture2D" uid="uid://dha8a5x24don4" path="res://assets/images/ui/icons/pencil.png" id="3_esqmj"]
[ext_resource type="Texture2D" uid="uid://7vssyechjmut" path="res://assets/images/ui/icons/cloud-upload.png" id="4_1atsu"]
[ext_resource type="Texture2D" uid="uid://b2gbt0stss8bn" path="res://assets/images/ui/icons/trash-can.png" id="5_a8glg"]

[node name="EditorLevelButton" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2676.0
offset_bottom = -1996.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_d6ccn")
theme_override_constants/separation = 120
script = ExtResource("2_ol4g6")

[node name="PlayButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 164)
layout_mode = 2
tooltip_text = "PLAY_LEVEL_TOOLTIP"
focus_mode = 0
text = "Level ??"

[node name="VSeparator" type="VSeparator" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="EditButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
tooltip_text = "EDIT_LEVEL_TOOLTIP"
focus_mode = 0
icon = ExtResource("3_esqmj")
icon_alignment = 1
expand_icon = true

[node name="UploadButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
tooltip_text = "UPLOAD_LEVEL_TOOLTIP"
focus_mode = 0
icon = ExtResource("4_1atsu")
icon_alignment = 1
expand_icon = true

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
tooltip_text = "DELETE_LEVEL_TOOLTIP"
focus_mode = 0
icon = ExtResource("5_a8glg")
icon_alignment = 1
expand_icon = true

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="UploadButton" to="." method="_on_upload_button_pressed"]
[connection signal="mouse_entered" from="DeleteButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
